testdata/golden/sema/invalid/relative_import_explicit_module_same_name/actual/chess/_chess.sg
pragma module::chess;

pub fn initial_game() -> int {
    return 42;
}
